[package]
name = "rziv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arboard = "3.2.1"
clap = { version = "4.4.6", features = ["derive"] }
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
env_logger = "0.10.0"
image = { version = "0.24.7", features = ["rgb"] }
log = "0.4.20"
paste = "1.0.14"
rayon = "1.8.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
